@@ -1,3 +1,8 @@
+2001-05-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* tmda-inject (main): Support `X-TMDA: dated timeout'
+	(to override Defaults.TIMEOUT)
+
 2001-05-10  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda-inject (inject_message): Use the popen2 module instead of
